<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maelstrom</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="status">Status</string>
    <string name="b_add">Add</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="presence">Presence</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

</resources>