<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/et_lname"
        android:hint="@string/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_fname"
        android:layout_below="@+id/et_fname"
        android:layout_marginTop="20dp"
        android:ems="10" />

    <EditText
        android:id="@+id/et_fname"
        android:hint="@string/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/cb_presence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_lname"
        android:layout_below="@+id/et_lname"
        android:layout_marginTop="24dp"
        android:text="@string/presence" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_cancel"
        android:layout_alignBottom="@+id/button_cancel"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/cb_presence"
        android:text="@string/ok" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_presence"
        android:layout_marginTop="32dp"
        android:layout_toLeftOf="@+id/button_ok"
        android:text="@string/cancel" />

</RelativeLayout>
